--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "<img src=\"split.png\" width=500>\n",
     "\n",
-    "We can see that the split has not __FULLY__ classified the data above, but the resulting data is __tidier__ than it was before the split. Using a series of such splits using different feature variables, we try to clean up the data as much as possible in the leaf nodes. At each step, we want to decrease the entropy, so __entropy is computed before after the split__. If it decreases, the split is retained and we can proceed to the next step, otherwise, we must try to split with another feature or stop this branch (or quit, calling it best solution).\n",
+    "We can see that the split has not __FULLY__ classified the data above, but the resulting data is __tidier__ than it was before the split. Using a series of such splits using different feature variables, we try to clean up the data as much as possible in the leaf nodes. At each step, we want to decrease the entropy, so __entropy is computed before and after the split__. If it decreases, the split is retained and we can proceed to the next step, otherwise, we must try to split with another feature or stop this branch (or quit, calling it best solution).\n",
     "\n"
    ]
   },
@@ -82,8 +82,10 @@
     "So what we want to do is group these observations according to the target class they belong to. We can write \n",
     "down the ratio of each class as:\n",
     "\n",
+    "$$ n + m = N$$ \n",
     "\n",
-    "$$p = n/N - (class 1)$$ $$q = m/N = 1-p - (class 2)$$\n",
+    "\n",
+    "$$p = n/N \\rightarrow (class 1)$$ $$q = m/N = 1-p \\rightarrow (class 2)$$\n",
     "\n",
     "Based on this , the entropy of the complete dataset, before the split is calculated as:\n",
     "\n",
